dataset1235/2025-2/1153765216/users/3146567693/executions/2747719322_1462915504.log
== SUBMISSION (2025-08-26 15:22:55)
-- CODE: 
from math import  *
import math 

lado = int(input("digite o comprimento do lado do Pentágono: "))

x = math.tan(pi/5)

apotema = lado/(2*x)
área = 5/2 * lado * apotema

print(round(área,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
digite o comprimento do lado do Pentágono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
digite o comprimento do lado do Pentágono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
digite o comprimento do lado do Pentágono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
digite o comprimento do lado do Pentágono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
digite o comprimento do lado do Pentágono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
digite o comprimento do lado do Pentágono: 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 15:19:06)
-- CODE: 
import math 

lado = int(input("digite o comprimento do lado do Pentágono: "))

tang = math.tang
pi = math.pi

apotema = lado/ 2 * tang(lado)
área = 5/2 * lado * apotema

print(round(área,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 15:08:05)
-- CODE: 
from math import *

lado = int(input("digite o comprimento do lado do Pentágono: "))

apotema = lado/ 2 * tang(pi/5)
área = 5/2 * lado * apotema

print(round(área,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/ 2 * tang(pi/5)
                        ^^^^
NameError: name 'tang' is not defined. Did you mean: 'tan'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/ 2 * tang(pi/5)
                        ^^^^
NameError: name 'tang' is not defined. Did you mean: 'tan'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/ 2 * tang(pi/5)
                        ^^^^
NameError: name 'tang' is not defined. Did you mean: 'tan'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/ 2 * tang(pi/5)
                        ^^^^
NameError: name 'tang' is not defined. Did you mean: 'tan'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/ 2 * tang(pi/5)
                        ^^^^
NameError: name 'tang' is not defined. Did you mean: 'tan'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/ 2 * tang(pi/5)
                        ^^^^
NameError: name 'tang' is not defined. Did you mean: 'tan'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 15:08:50)
-- CODE: 
import math

lado = int(input("digite o comprimento do lado do Pentágono: "))

apotema = lado/ 2 * tang(pi/5)
área = 5/2 * lado * apotema

print(round(área,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/ 2 * tang(pi/5)
                        ^^^^
NameError: name 'tang' is not defined. Did you mean: 'range'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/ 2 * tang(pi/5)
                        ^^^^
NameError: name 'tang' is not defined. Did you mean: 'range'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/ 2 * tang(pi/5)
                        ^^^^
NameError: name 'tang' is not defined. Did you mean: 'range'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/ 2 * tang(pi/5)
                        ^^^^
NameError: name 'tang' is not defined. Did you mean: 'range'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/ 2 * tang(pi/5)
                        ^^^^
NameError: name 'tang' is not defined. Did you mean: 'range'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado/ 2 * tang(pi/5)
                        ^^^^
NameError: name 'tang' is not defined. Did you mean: 'range'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 15:19:06)
-- CODE: 
import math 

lado = int(input("digite o comprimento do lado do Pentágono: "))

tang = math.tang
pi = math.pi

apotema = lado/ 2 * tang(lado)
área = 5/2 * lado * apotema

print(round(área,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 15:22:54)
-- CODE: 
from math import  *
import math 

lado = int(input("digite o comprimento do lado do Pentágono: "))

x = math.tan(pi/5)

apotema = lado/(2*x)
área = 5/2 * lado * apotema

print(round(área,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
digite o comprimento do lado do Pentágono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
digite o comprimento do lado do Pentágono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
digite o comprimento do lado do Pentágono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
digite o comprimento do lado do Pentágono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
digite o comprimento do lado do Pentágono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
digite o comprimento do lado do Pentágono: 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 15:18:45)
-- CODE: 
import math 

lado = int(input("digite o comprimento do lado do Pentágono: "))

tang = math.tang
pi = math.pi

apotema = lado/ 2 * tang(pi/5)
área = 5/2 * lado * apotema

print(round(área,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 15:22:29)
-- CODE: 
import math 

lado = int(input("digite o comprimento do lado do Pentágono: "))

x = math.tan(pi/5)

apotema = lado/(2*x)
área = 5/2 * lado * apotema

print(round(área,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = math.tan(pi/5)
                 ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = math.tan(pi/5)
                 ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = math.tan(pi/5)
                 ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = math.tan(pi/5)
                 ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = math.tan(pi/5)
                 ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = math.tan(pi/5)
                 ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 15:19:07)
-- CODE: 
import math 

lado = int(input("digite o comprimento do lado do Pentágono: "))

tang = math.tang
pi = math.pi

apotema = lado/ 2 * tang(lado)
área = 5/2 * lado * apotema

print(round(área,2))
# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tang = math.tang
           ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
